branches/wip/Archive/b71e4dec7810043e74ba5eee48e5ca2a-e1204655eaff68246b392dc70c5a32c9/output
+ clang++ -std=c++11 -O3 -march=native -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:20:7: error: no matching member function for call to 'some_method'
    i.some_method(); // error!
    ~~^~~~~~~~~~~
main.cpp:10:10: note: candidate template ignored: couldn't infer template argument 'V'
    void some_method()
         ^
1 error generated.
